sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:3: error: not found: value i
var v=getValeur(i)
                ^AlgInsertionSort:6: error: not found: value j
   while(j>0 && getValeur(j-1>v)){
         ^AlgInsertionSort:6: error: not found: value j
   while(j>0 && getValeur(j-1>v)){
                          ^AlgInsertionSort:7: error: not found: value j
     copie(j-1,j)
           ^AlgInsertionSort:7: error: not found: value j
     copie(j-1,j)
               ^AlgInsertionSort:8: error: not found: value j
     j=j-1
     ^AlgInsertionSort:11: error: not found: value j
   setValeur(j,v)}} 
             ^