sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var v=getValeur(i)
for(i<- 1 to (getNombreValeurs()-1))
  {v=getValeur(i)
   while(j>0 && getValeur(j-1>v)){
     copie(j-1,j)
     j=j-1
     
   }
   setValeur(j,v)}}